# acm

./: '  .gitignore  .secret.asc  Cargo.toml  Dockerfile  Dockerfile.ramiel  Dockerfile.server  README.md  build.rs  netlify.toml  sqlx-data.json
app/: Cargo.toml  Trunk.toml  index.html
app/src/: helpers.rs  main.rs  state.rs
app/src/components/: code_editor.rs  error.rs  mod.rs  modal.rs  navbar.rs  tabbed.rs  tests.rs
app/src/views/: account.rs  home.rs  leaderboard.rs  login.rs  meeting_editor.rs  meetings.rs  mod.rs  problem.rs  problem_editor.rs  problem_list.rs  signup.rs
app/styles/: auth.scss  code_runner.scss  description.scss  editor.scss  error.scss  leaderboard.scss  navbar.scss  styles.scss  tests.scss
app/styles/components/: button.scss  code-runner.scss  markdown-editor.scss  markdown_editor.scss  modal.scss  tabbed.scss  tests-editor.scss
app/styles/views/: account.scss  leaderboard.scss  meetings.scss  problem-editor.scss  problem-list.scss  problem.scss
crates/convert_tests/: Cargo.toml
crates/convert_tests/src/: main.rs
crates/ramiel/: Cargo.toml  README.md
crates/ramiel/src/: main.rs
crates/ramiel/src/runners/: cplusplus.rs  default_header.h  mod.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  ws.rs
crates/server/src/auth/: discord.rs  mod.rs
crates/server/src/competitions/: competition.rs  index.rs  mod.rs  new.rs  problem_status.rs
crates/server/src/competitions/teams/: join.rs  new.rs
crates/server/src/meetings/: edit.rs  meeting.rs
crates/server/src/problems/: edit.rs  history.rs  index.rs  leaderboard.rs  mod.rs  new.rs  problem.rs  recent_submission.rs  recent_tests.rs  tests.rs
crates/server/src/run/: custom.rs  generate_tests.rs  mod.rs  submit.rs
crates/server/src/submissions/: mod.rs  new_completions.rs  submission.rs  tests.rs
crates/server/src/user/: edit.rs  mod.rs  star_count.rs  submissions.rs
crates/shared/: Cargo.toml
crates/shared/src/models/: forms.rs  mod.rs  runner.rs  test.rs
crates/wasm_memory/: Cargo.toml  test.wasm
crates/wasm_memory/src/: estimate_complexity.rs  lib.rs  wasm_function.rs  wasm_memory.rs
gelus/: Cargo.toml
gelus/src/: main.rs
lilith/: .env.production  Cargo.toml  Trunk.toml  babel.config.json  index.html  next.config.js  package.json  postcss.config.js  tailwind.config.js
lilith/components/: countdown.tsx  editor-preferences.tsx  editor.tsx  error-box.tsx  footer.tsx  form-row.tsx  loading-button.tsx  modal.tsx  navbar.tsx  queue-status.tsx  source-code.tsx  tabbed.tsx
lilith/components/meetings/: activities.tsx  index.tsx  meeting.tsx  schedule.tsx
lilith/components/problem/: code-runner.tsx  description.tsx  index.tsx  input-tester.tsx  leaderboard.tsx
lilith/components/problem-editor/: description-editor.tsx  tests-editor.tsx
lilith/components/problem/submission/: error.tsx  history.tsx  index.tsx  test-result.tsx
lilith/components/problem/submission/tests/: container.tsx  entries.tsx  graph.tsx  grid.tsx  index.tsx  list.tsx  single.tsx  test_result_view.tsx  test_view.tsx
lilith/components/test-editor/: index.tsx
lilith/pages/: _app.tsx  index.tsx  leaderboard.tsx  signin.tsx  signup.tsx
lilith/pages/auth/: discord.tsx
lilith/pages/competitions/: [id].tsx  index.tsx  new.tsx
lilith/pages/dashboard/: index.tsx
lilith/pages/meetings/: [[...id]].tsx  new.tsx
lilith/pages/problems/: [id].tsx  index.tsx  new.tsx
lilith/pages/problems/[id]/: edit.tsx  index.tsx
lilith/pages/submissions/: [id].tsx
lilith/pages/user/: [username].tsx
lilith/public/: _redirects
lilith/src/: helpers.rs  lib.rs  state.rs
lilith/src/components/: code_editor.rs  error.rs  footer.rs  input_tester.rs  loading_button.rs  mod.rs  modal.rs  navbar.rs  share_button.rs  submission.rs  tabbed.rs  tests.rs
lilith/src/views/: account.rs  home.rs  leaderboard.rs  logout.rs  meeting_editor.rs  meetings.rs  mod.rs  problem.rs  problem_editor.rs  problem_list.rs  signup.rs  submission.rs
lilith/styles/: globals.css  styles.scss  tests.scss
lilith/styles/components/: code-runner.scss  footer.scss  markdown-editor.scss  modal.scss  spinner.scss  tabbed.scss  tests-editor.scss
lilith/styles/views/: account.scss  home.scss  meetings.scss  problem-editor.scss  problem-list.scss  problem.scss
lilith/utils/: fetcher.ts  job.ts  latex.ts  state.ts  time.ts
migrations/: 20220605204530_users.sql  20220605205435_meetings.sql  20220607012425_rename_expected_output.sql  20220925081421_jobs.sql  20221006234807_test_runtime_limit.sql  20221011233020_test_results_error.sql  20221012022329_problems_publish_time.sql  20221020191446_problems_runtime_muiltiplier.sql  20221108032034_competitions.sql  20221117083921_tags.sql  20230119105950_hidden_tests.sql  20230128022848_submission_complexity.sql  20230426005132_problems_fts.sql
ramiel/: Cargo.toml  wasmtime-cache.toml
scripts/: compress.sh  start_acm.sh
server/: Cargo.toml  sqlx-data.json
server/src/: error.rs  main.rs  pagination.rs  ws.rs
server/src/api/: account.rs  auth.rs  leaderboard.rs  meetings.rs  mod.rs  problems.rs  run.rs  signup.rs  submissions.rs
server/src/auth/: discord.rs  login.rs  mod.rs  signup.rs
server/src/competitions/: index.rs  leaderboard.rs  mod.rs  new.rs
server/src/competitions/teams/: index.rs  join.rs  joinable.rs  leave.rs  me.rs  mod.rs  new.rs  team.rs
server/src/leaderboard/: first_place.rs  mod.rs
server/src/meetings/: activities.rs  edit.rs  index.rs  mod.rs  next.rs
server/src/problems/: edit.rs  history.rs  index.rs  mod.rs  new.rs  problem.rs  recent_submission.rs  recent_tests.rs  tests.rs
server/src/run/: custom.rs  generate_tests.rs  mod.rs  submit.rs
server/src/state/: auth.rs  leaderboard.rs  meetings.rs  mod.rs  problems.rs  submissions.rs  users.rs
server/src/submissions/: invalidate.rs  mod.rs  new_completions.rs  submission.rs  tests.rs  validate.rs
server/src/user/: edit.rs  me.rs  mod.rs  submissions.rs  user_info.rs  username.rs
sql/: activities.up.sql  problems.up.sql  submissions.up.sql  test_result.up.sql  tests.up.sql  (+1 more)
(+11 files in other folders)
