[package]
name = "acm"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["server", "app"]
default-members = ["server"]

[dependencies]
lazy_static = "1.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite"], optional = true }
validator = { version = "0.15", features = ["derive"] }

[features]
sqlx = ["dep:sqlx"]

[profile.release.package.app]
opt-level = 'z'
