[package]
name = "acm"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["server", "ramiel", "gelus", "lilith"]
default-members = ["server"]

[dependencies]
lazy_static = { version = "1.4", optional = true }
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite"], optional = true }
thiserror = "1"
validator = { version = "0.15", features = ["derive"], optional = true }

[features]
sqlx = ["dep:sqlx"]
validate = ["dep:regex", "dep:validator", "dep:lazy_static"]

[profile.release.package.lilith]
opt-level = "z"

[profile.release]
lto = true
