[package]
name = "acm"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "crates/server",
    "crates/ramiel",
    "crates/shared",
    "crates/convert_tests",
    "crates/wasm_memory",
]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers", "ws"] }
bcrypt = "0.13"
byteorder = "1.4.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive", "env"] }
thiserror = "1"
futures = "0.3"
jsonwebtoken = "8"
log = "0.4"
once_cell = "1"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
validator = { version = "0.15", features = ["derive"] }
wasmtime = "4"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "offline",
] }
