[package]
edition = "2021"
name = "app"
version = "0.1.0"

[dependencies]
acm = { path = ".." }
log = "0.4"
markdown = "0.3"
monaco = { git = "https://github.com/siku2/rust-monaco" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlFormElement"] }
wee_alloc = "0.4"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.2"
