[package]
name = "gelus"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11"
acm = { path = "../" }
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.2"
reqwest = "0.11"
