[package]
edition = "2021"
name = "lilith"
version = "0.1.0"

[dependencies]
acm = { path = ".." }
gloo-net = "0.2"
gloo-timers = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
log = "0.4"
monaco = { git = "https://github.com/siku2/rust-monaco" }
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlFormElement", "HtmlSelectElement", "MediaQueryList"] }
wee_alloc = "0.4"
yew = { git = "https://github.com/yewstack/yew.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

[features]
deploy = []

[[bin]]
name = "lilith"
required-features = ["yew/csr"]
