[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acm = { path = "..", features = ["sqlx", "validate"] }
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
bcrypt = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
dotenv_codegen = { version = "0.15" }
env_logger = "0.9"
jsonwebtoken = "8"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite"] }
validator = { version = "0.15", features = ["derive"] }
