[package]
name = "convert_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
shared = { path = "../shared" }
wasm_memory = { path = "../wasm_memory" }
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
