[package]
name = "ramiel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow.workspace = true
async-trait = "0.1"
clap.workspace = true
env_logger = "0.9"
log.workspace = true
futures.workspace = true
md5 = "0.7"
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
thiserror.workspace = true
tokio.workspace = true
wasi-common = "7"
wasm_memory = { path = "../wasm_memory" }
wasmtime-wasi = "7"
wasmtime.workspace = true
