[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum-extra = { version = "0.4", features = ["cookie"] }
axum.workspace = true
bcrypt.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
validator.workspace = true
wasm_memory = { path = "../wasm_memory" }
