[package]
name = "wasm_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
serde.workspace = true
log.workspace = true
sqlx.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
